--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-blur')
     compile project(':react-native-svg')
     compile project(':react-native-device-info')
     compile fileTree(dir: "libs", include: ["*.jar"])
