--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "json-easy-filter": "^0.3.1",
     "react": "15.4.2",
     "react-native": "0.42.3",
+    "react-native-blur": "^2.0.0",
     "react-native-css": "^1.2.52",
     "react-native-device-info": "^0.10.1",
+    "react-native-effects-view": "^0.4.0",
     "react-native-redux-router": "^1.0.7",
     "react-native-svg": "^5.1.7",
     "react-native-svg-image": "^1.0.0",
