--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-effects-view": "0.4.0",
     "react-native-svg": "5.4.2",
     "react-native-svg-image": "2.0.1",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.17",
     "react-redux": "5.0.6",
     "react-transform-catch-errors": "1.0.2",
