--- a/ios/AssetsTV.xcodeproj/xcshareddata/xcschemes/AssetsTV-tvOS.xcscheme
+++ b/ios/AssetsTV.xcodeproj/xcshareddata/xcschemes/AssetsTV-tvOS.xcscheme
@@ -101,6 +101,13 @@
             ReferencedContainer = "container:AssetsTV.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
